# config-translator

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: ConfigTranslator.hpp
src/: ConfigTranslator.cpp
tests/: CMakeLists.txt  ConfigTranslatorTest.cpp
